--- a/CUDA_GPU.ipynb
+++ b/CUDA_GPU.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "CUDA-GPU.ipynb",
-      "version": "0.3.2",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -22,13 +22,24 @@
         "colab_type": "text"
       },
       "source": [
-        "[View in Colaboratory](https://colab.research.google.com/github/ShimaaElabd/CUDA-GPU-Contrast-Enhancement/blob/master/CUDA_GPU.ipynb)"
+        "<a href=\"https://colab.research.google.com/github/chiyanglin-AStar/Cuda_Colab_study/blob/master/CUDA_GPU.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "<a href=\"https://githubtocolab.com/chiyanglin-AStar/Cuda_Colab_study/blob/master/CUDA_GPU.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\"/></a>\n",
+        "\n",
+        "\n",
+        "https://github.com/chiyanglin-AStar/Cuda_Colab_study/blob/master/CUDA_GPU.ipynb"
+      ],
       "metadata": {
-        "id": "7jo3uJgJ2DhB",
-        "colab_type": "text"
+        "id": "3Er195Vonzia"
+      }
+    },
+    {
+      "metadata": {
+        "id": "7jo3uJgJ2DhB"
       },
       "cell_type": "markdown",
       "source": [
@@ -38,7 +49,6 @@
     {
       "metadata": {
         "id": "mgH5HreZ2WS9",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 3148
@@ -52,7 +62,7 @@
         "! apt install nvidia-384 nvidia-384-dev\n",
         "! apt-get install g++ freeglut3-dev build-essential libx11-dev libxmu-dev libxi-dev libglu1-mesa libglu1-mesa-dev"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,8 +270,7 @@
     },
     {
       "metadata": {
-        "id": "SZAHFNCj4St8",
-        "colab_type": "text"
+        "id": "SZAHFNCj4St8"
       },
       "cell_type": "markdown",
       "source": [
@@ -271,7 +280,6 @@
     {
       "metadata": {
         "id": "gvlavcVD4K7W",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 306
@@ -282,7 +290,7 @@
       "source": [
         "! nvidia-smi"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -311,8 +319,7 @@
     },
     {
       "metadata": {
-        "id": "a_cjIVVP4egG",
-        "colab_type": "text"
+        "id": "a_cjIVVP4egG"
       },
       "cell_type": "markdown",
       "source": [
@@ -322,7 +329,6 @@
     {
       "metadata": {
         "id": "Cv_ejpDm4glG",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 190
@@ -333,7 +339,7 @@
       "source": [
         "!gcc -v"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +361,6 @@
     {
       "metadata": {
         "id": "LW8yf04n6JPV",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 935
@@ -367,7 +372,7 @@
         "!apt install gcc-6\n",
         "!apt install g++-6"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,8 +438,7 @@
     },
     {
       "metadata": {
-        "id": "y3fQT5o--txn",
-        "colab_type": "text"
+        "id": "y3fQT5o--txn"
       },
       "cell_type": "markdown",
       "source": [
@@ -444,7 +448,6 @@
     {
       "metadata": {
         "id": "h7lbKJvm-SLG",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -455,7 +458,7 @@
       "source": [
         "!wget https://developer.nvidia.com/compute/cuda/9.2/Prod/local_installers/cuda-repo-ubuntu1710-9-2-local_9.2.88-1_amd64"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,7 +487,6 @@
     {
       "metadata": {
         "id": "xMcILMIABxgl",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 309
@@ -495,7 +497,7 @@
       "source": [
         "!wget https://developer.nvidia.com/compute/cuda/9.2/Prod/patches/1/cuda-repo-ubuntu1710-9-2-local-cublas-update-1_1.0-1_amd64"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -524,7 +526,6 @@
     {
       "metadata": {
         "id": "L2s4pxq6Cn2b",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -535,7 +536,7 @@
       "source": [
         "!dpkg -i cuda-repo-ubuntu1710-9-2-local_9.2.88-1_amd64"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,7 +553,6 @@
     {
       "metadata": {
         "id": "Ox-rLzKqDQzw",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -563,7 +563,7 @@
       "source": [
         "!apt-key add /var/cuda-repo-9-2-local/7fa2af80.pub"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,7 +577,6 @@
     {
       "metadata": {
         "id": "50rnK3u2DW5I",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
@@ -588,7 +587,7 @@
       "source": [
         "!apt-get update"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,7 +614,6 @@
     {
       "metadata": {
         "id": "yiHjgIZyDaEB",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 2417
@@ -626,7 +624,7 @@
       "source": [
         "!apt-get install cuda"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -785,7 +783,6 @@
     {
       "metadata": {
         "id": "DdAomzZjE2ap",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -796,7 +793,7 @@
       "source": [
         "!dpkg -i cuda-repo-ubuntu1710-9-2-local-cublas-update-1_1.0-1_amd64"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -813,7 +810,6 @@
     {
       "metadata": {
         "id": "AKVsaAAsG6CC",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -824,7 +820,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -842,8 +838,7 @@
     },
     {
       "metadata": {
-        "id": "yQoXUG9dE-OU",
-        "colab_type": "text"
+        "id": "yQoXUG9dE-OU"
       },
       "cell_type": "markdown",
       "source": [
@@ -853,7 +848,6 @@
     {
       "metadata": {
         "id": "nsyMK9fxFHcO",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 802
@@ -864,7 +858,7 @@
       "source": [
         "!apt-get install nvidia-cuda-toolkit"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -922,7 +916,6 @@
     {
       "metadata": {
         "id": "evxzc04GGqH3",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -933,7 +926,7 @@
       "source": [
         "!nvcc --version"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -949,8 +942,7 @@
     },
     {
       "metadata": {
-        "id": "mhD0p6aQHgPR",
-        "colab_type": "text"
+        "id": "mhD0p6aQHgPR"
       },
       "cell_type": "markdown",
       "source": [
@@ -960,7 +952,6 @@
     {
       "metadata": {
         "id": "byTunTSUHO0N",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -972,7 +963,7 @@
         "! ln -s /usr/bin/gcc-6 /usr/local/cuda/bin/gcc\n",
         "! ln -s /usr/bin/g++-6 /usr/local/cuda/bin/g++"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -986,8 +977,7 @@
     },
     {
       "metadata": {
-        "id": "vWgJZxS5JMOG",
-        "colab_type": "text"
+        "id": "vWgJZxS5JMOG"
       },
       "cell_type": "markdown",
       "source": [
@@ -1010,7 +1000,6 @@
     {
       "metadata": {
         "id": "gbrA1dzfKvzg",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -1021,7 +1010,7 @@
       "source": [
         "!apt-get install cmake"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1038,8 +1027,7 @@
     },
     {
       "metadata": {
-        "id": "TagN1KWwLPrI",
-        "colab_type": "text"
+        "id": "TagN1KWwLPrI"
       },
       "cell_type": "markdown",
       "source": [
@@ -1049,7 +1037,6 @@
     {
       "metadata": {
         "id": "YnLx3pVtLTca",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -1060,7 +1047,7 @@
       "source": [
         "!git clone https://github.com/ShimaaElabd/CUDA-GPU-Contrast-Enhancement.git"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1074,7 +1061,6 @@
     {
       "metadata": {
         "id": "TmmtqCzVMECe",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -1085,7 +1071,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1104,7 +1090,6 @@
     {
       "metadata": {
         "id": "ljBaItYiMHaK",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1115,7 +1100,7 @@
       "source": [
         "%cd CUDA-GPU-Contrast-Enhancement"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1129,7 +1114,6 @@
     {
       "metadata": {
         "id": "TgffI7r0Nn-9",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -1141,7 +1125,7 @@
         "!mkdir build\n",
         "%cd build"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1156,7 +1140,6 @@
     {
       "metadata": {
         "id": "SlZ20wyAOQTe",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -1167,7 +1150,7 @@
       "source": [
         "!ls /usr/local/cuda-9.2/samples/common/inc"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1190,21 +1173,18 @@
     },
     {
       "metadata": {
-        "id": "k52_js71PiZI",
-        "colab_type": "code",
-        "colab": {}
+        "id": "k52_js71PiZI"
       },
       "cell_type": "code",
       "source": [
         "! export CUDA_TOOLKIT_ROOT_DIR=/usr/local/cuda-9.2/"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "metadata": {
-        "id": "KXML8zDcRZnN",
-        "colab_type": "text"
+        "id": "KXML8zDcRZnN"
       },
       "cell_type": "markdown",
       "source": [
@@ -1214,7 +1194,6 @@
     {
       "metadata": {
         "id": "Y22IqoD-RaID",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -1225,7 +1204,7 @@
       "source": [
         "!cmake -D CUDA_TOOLKIT_ROOT_DIR=/usr/local/cuda-9.2/ .."
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1242,8 +1221,7 @@
     },
     {
       "metadata": {
-        "id": "shiSFbtzS-U4",
-        "colab_type": "text"
+        "id": "shiSFbtzS-U4"
       },
       "cell_type": "markdown",
       "source": [
@@ -1253,7 +1231,6 @@
     {
       "metadata": {
         "id": "EMslCXqnS4DX",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -1264,7 +1241,7 @@
       "source": [
         "!make"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1279,7 +1256,6 @@
     {
       "metadata": {
         "id": "6oQuELCLTI6g",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -1290,7 +1266,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1306,8 +1282,7 @@
     },
     {
       "metadata": {
-        "id": "iNHQEwEjT_Bo",
-        "colab_type": "text"
+        "id": "iNHQEwEjT_Bo"
       },
       "cell_type": "markdown",
       "source": [
@@ -1317,7 +1292,6 @@
     {
       "metadata": {
         "id": "GN1EVFokTL3S",
-        "colab_type": "code",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -1344,7 +1318,7 @@
         "\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1371,7 +1345,6 @@
     {
       "metadata": {
         "id": "w8ZzPRewalJp",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -1382,7 +1355,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1398,8 +1371,7 @@
     },
     {
       "metadata": {
-        "id": "fl4fbkyUe8K2",
-        "colab_type": "text"
+        "id": "fl4fbkyUe8K2"
       },
       "cell_type": "markdown",
       "source": [
@@ -1409,7 +1381,6 @@
     {
       "metadata": {
         "id": "RPd_Kp5uaqiI",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 459
@@ -1420,7 +1391,7 @@
       "source": [
         "!./5kk70-assignment-gpu "
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1459,7 +1430,6 @@
     {
       "metadata": {
         "id": "RRzc9NjSbW8S",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -1470,7 +1440,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1486,8 +1456,7 @@
     },
     {
       "metadata": {
-        "id": "CaiZZWoTf9he",
-        "colab_type": "text"
+        "id": "CaiZZWoTf9he"
       },
       "cell_type": "markdown",
       "source": [
@@ -1496,35 +1465,29 @@
     },
     {
       "metadata": {
-        "id": "agvEyogxgBbM",
-        "colab_type": "code",
-        "colab": {}
+        "id": "agvEyogxgBbM"
       },
       "cell_type": "code",
       "source": [
         "files.download('out_hsl.ppm')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "metadata": {
-        "id": "r86fT0uvnXnB",
-        "colab_type": "code",
-        "colab": {}
+        "id": "r86fT0uvnXnB"
       },
       "cell_type": "code",
       "source": [
         "#files.download('out.pgm')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "metadata": {
-        "id": "zjqitbNugN8g",
-        "colab_type": "code",
-        "colab": {}
+        "id": "zjqitbNugN8g"
       },
       "cell_type": "code",
       "source": [
@@ -1534,13 +1497,12 @@
         "import matplotlib.image as mpimg\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
       "metadata": {
         "id": "J2-ssH6KgO78",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1648
@@ -1582,7 +1544,7 @@
         "\n",
         "print(\"done.\")"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
