使用 Colaboratory 建立

--- a/basic_tutorial/cuda_basic_tutorial.ipynb
+++ b/basic_tutorial/cuda_basic_tutorial.ipynb
@@ -378,13 +378,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YnLx3pVtLTca",
-        "outputId": "a6394dc0-4021-44bf-9279-8d0cb7c6d18e"
+        "outputId": "8f7199c8-b2f6-4399-d342-06ec06879fa5"
       },
       "outputs": [
         {
@@ -392,11 +392,11 @@
           "name": "stdout",
           "text": [
             "Cloning into 'Cuda_Colab_study'...\n",
-            "remote: Enumerating objects: 70, done.\u001b[K\n",
-            "remote: Counting objects: 100% (70/70), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (63/63), done.\u001b[K\n",
-            "remote: Total 70 (delta 30), reused 30 (delta 7), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (70/70), done.\n"
+            "remote: Enumerating objects: 74, done.\u001b[K\n",
+            "remote: Counting objects: 100% (74/74), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (67/67), done.\u001b[K\n",
+            "remote: Total 74 (delta 32), reused 30 (delta 7), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (74/74), done.\n"
           ]
         }
       ],
@@ -406,13 +406,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TmmtqCzVMECe",
-        "outputId": "b2372b1e-9017-4dc0-c612-507983446fa6"
+        "outputId": "902912f0-75d3-483a-8b5f-7ed743d55374"
       },
       "outputs": [
         {
@@ -429,13 +429,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ljBaItYiMHaK",
-        "outputId": "f11ebdd3-5d41-4a93-fc13-d1aee6aab66e"
+        "outputId": "1e02d5f8-f8b1-4c9f-bff1-e52f1c6becfb"
       },
       "outputs": [
         {
@@ -453,14 +453,116 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install git+https://github.com/andreinechaev/nvcc4jupyter.git"
+        "%%writefile hello.cu\n",
+        "#include<stdio.h>\n",
+        "__global__ void cuda_hello(){\n",
+        "    printf(\"Hello World from GPU!\\n\");\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    cuda_hello<<<1,1>>>(); \n",
+        "    return 0;\n",
+        "}"
       ],
       "metadata": {
-        "id": "6aJrNyoNJt4v",
-        "outputId": "57af2d26-1db9-467f-cfc3-c8896b176462",
+        "id": "dOMudY4ROfjN",
+        "outputId": "136a2fe9-87b7-4e3c-96c3-6dfd7184be68",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing hello.cu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!nvcc hello.cu -o hello"
+      ],
+      "metadata": {
+        "id": "YNKhm2LVOuKN"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls"
+      ],
+      "metadata": {
+        "id": "p4DiI7n7O-CY",
+        "outputId": "0d8eec51-42b0-47e6-8c2d-965259a49ebb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cuda_basic_tutorial.ipynb  hello  hello.cu\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!./hello"
+      ],
+      "metadata": {
+        "id": "guOFlMWLPlFd"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!nvprof --version"
+      ],
+      "metadata": {
+        "id": "HB_JFFpvPQz8",
+        "outputId": "08161756-3388-41e7-dc20-b66aea83019c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "nvprof: NVIDIA (R) Cuda command line profiler\n",
+            "Copyright (c) 2012 - 2020 NVIDIA Corporation\n",
+            "Release version 11.1.105 (21)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install git+https://github.com/andreinechaev/nvcc4jupyter.git"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6aJrNyoNJt4v",
+        "outputId": "57af2d26-1db9-467f-cfc3-c8896b176462"
       },
       "execution_count": 25,
       "outputs": [
@@ -489,11 +591,11 @@
         "%load_ext nvcc_plugin"
       ],
       "metadata": {
-        "id": "zPCLbxXtGbXt",
-        "outputId": "ad66f60f-6540-40f0-9eba-f92a7eaeaf09",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zPCLbxXtGbXt",
+        "outputId": "ad66f60f-6540-40f0-9eba-f92a7eaeaf09"
       },
       "execution_count": 26,
       "outputs": [
@@ -527,11 +629,11 @@
         "}"
       ],
       "metadata": {
-        "id": "8ghAgIdRF4wY",
-        "outputId": "41ea5f3b-56c7-4ba0-90c7-cce0cebe86eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8ghAgIdRF4wY",
+        "outputId": "41ea5f3b-56c7-4ba0-90c7-cce0cebe86eb"
       },
       "execution_count": 28,
       "outputs": [
@@ -587,11 +689,11 @@
         "}"
       ],
       "metadata": {
-        "id": "jhcMmCXhLjLv",
-        "outputId": "3730f737-5461-4b82-c715-4c3570efee5b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jhcMmCXhLjLv",
+        "outputId": "3730f737-5461-4b82-c715-4c3570efee5b"
       },
       "execution_count": 33,
       "outputs": [
@@ -667,11 +769,11 @@
         "}"
       ],
       "metadata": {
-        "id": "y4gO3fzgKQSd",
-        "outputId": "47b5e3d7-5a24-45c8-ac81-15dbe30b505c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "y4gO3fzgKQSd",
+        "outputId": "47b5e3d7-5a24-45c8-ac81-15dbe30b505c"
       },
       "execution_count": 40,
       "outputs": [
@@ -770,11 +872,11 @@
         "}"
       ],
       "metadata": {
-        "id": "6JfRtLevMAb3",
-        "outputId": "9bf7c62f-1579-4501-f4e7-33f3f40ebfc9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6JfRtLevMAb3",
+        "outputId": "9bf7c62f-1579-4501-f4e7-33f3f40ebfc9"
       },
       "execution_count": 35,
       "outputs": [
@@ -848,11 +950,11 @@
         "}"
       ],
       "metadata": {
-        "id": "ZBuRKxG5LEPN",
-        "outputId": "07e42a00-a3e9-4e93-8861-a7861747e43c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZBuRKxG5LEPN",
+        "outputId": "07e42a00-a3e9-4e93-8861-a7861747e43c"
       },
       "execution_count": 41,
       "outputs": [
@@ -871,11 +973,11 @@
         "!ls"
       ],
       "metadata": {
-        "id": "pe-9B2sYLUMl",
-        "outputId": "c9f84791-c6e4-45f1-b913-9604e226cd1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pe-9B2sYLUMl",
+        "outputId": "c9f84791-c6e4-45f1-b913-9604e226cd1f"
       },
       "execution_count": 42,
       "outputs": [
@@ -901,7 +1003,6 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
       "name": "CUDA-GPU-simple.ipynb",
       "provenance": [],
