使用 Colaboratory 建立

--- a/basic_tutorial/cuda_basic_tutorial.ipynb
+++ b/basic_tutorial/cuda_basic_tutorial.ipynb
@@ -465,11 +465,11 @@
         "}"
       ],
       "metadata": {
-        "id": "dOMudY4ROfjN",
-        "outputId": "136a2fe9-87b7-4e3c-96c3-6dfd7184be68",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dOMudY4ROfjN",
+        "outputId": "136a2fe9-87b7-4e3c-96c3-6dfd7184be68"
       },
       "execution_count": 7,
       "outputs": [
@@ -490,7 +490,7 @@
       "metadata": {
         "id": "YNKhm2LVOuKN"
       },
-      "execution_count": 8,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -499,19 +499,19 @@
         "!ls"
       ],
       "metadata": {
-        "id": "p4DiI7n7O-CY",
-        "outputId": "0d8eec51-42b0-47e6-8c2d-965259a49ebb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p4DiI7n7O-CY",
+        "outputId": "e7e3e9bc-481b-468c-e17c-b60dc986a99e"
       },
-      "execution_count": 9,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "cuda_basic_tutorial.ipynb  hello  hello.cu\n"
+            "cuda_basic_tutorial.ipynb  hello  hello.cu  src\n"
           ]
         }
       ]
@@ -519,13 +519,142 @@
     {
       "cell_type": "code",
       "source": [
-        "!./hello"
+        "!su ./hello"
       ],
       "metadata": {
-        "id": "guOFlMWLPlFd"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "guOFlMWLPlFd",
+        "outputId": "6421d4b3-5ad7-4f90-e29a-727f72f282ba"
       },
-      "execution_count": 11,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "No passwd entry for user './hello'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%cu\n",
+        "#include<iostream>\n",
+        "using namespace std;\n",
+        "__global__ void cuda_hello(){\n",
+        "    std::cout << \"Hello World from GPU!\\n\";\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    cuda_hello<<<1,1>>>(); \n",
+        "    return 0;\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4F9RMM_QQgY3",
+        "outputId": "87b1727f-ecc7-4581-9d5b-d16f32724fc4"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/tmp/tmprtztxbyg/ad16fb7d-1f5b-467b-9ab0-928973e79ab1.cu(4): warning: address of a host variable \"std::cout\" cannot be directly taken in a device function\n",
+            "\n",
+            "/tmp/tmprtztxbyg/ad16fb7d-1f5b-467b-9ab0-928973e79ab1.cu(4): error: calling a __host__ function(\"std::operator <<<    ::std::char_traits<char> > \") from a __global__ function(\"cuda_hello\") is not allowed\n",
+            "\n",
+            "/tmp/tmprtztxbyg/ad16fb7d-1f5b-467b-9ab0-928973e79ab1.cu(4): error: identifier \"std::operator <<<    ::std::char_traits<char> > \" is undefined in device code\n",
+            "\n",
+            "/tmp/tmprtztxbyg/ad16fb7d-1f5b-467b-9ab0-928973e79ab1.cu(4): error: identifier \"std::cout\" is undefined in device code\n",
+            "\n",
+            "3 errors detected in the compilation of \"/tmp/tmprtztxbyg/ad16fb7d-1f5b-467b-9ab0-928973e79ab1.cu\".\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%cu\n",
+        "#include<iostream>\n",
+        "using namespace std;\n",
+        "__global__ void cuda_hello(){\n",
+        "    std::cout << \"Hello World from GPU!\\n\";\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    cuda_hello<<<1,1>>>(); \n",
+        "    return 0;\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "87b1727f-ecc7-4581-9d5b-d16f32724fc4",
+        "id": "PHRfRa86RWPX"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/tmp/tmprtztxbyg/ad16fb7d-1f5b-467b-9ab0-928973e79ab1.cu(4): warning: address of a host variable \"std::cout\" cannot be directly taken in a device function\n",
+            "\n",
+            "/tmp/tmprtztxbyg/ad16fb7d-1f5b-467b-9ab0-928973e79ab1.cu(4): error: calling a __host__ function(\"std::operator <<<    ::std::char_traits<char> > \") from a __global__ function(\"cuda_hello\") is not allowed\n",
+            "\n",
+            "/tmp/tmprtztxbyg/ad16fb7d-1f5b-467b-9ab0-928973e79ab1.cu(4): error: identifier \"std::operator <<<    ::std::char_traits<char> > \" is undefined in device code\n",
+            "\n",
+            "/tmp/tmprtztxbyg/ad16fb7d-1f5b-467b-9ab0-928973e79ab1.cu(4): error: identifier \"std::cout\" is undefined in device code\n",
+            "\n",
+            "3 errors detected in the compilation of \"/tmp/tmprtztxbyg/ad16fb7d-1f5b-467b-9ab0-928973e79ab1.cu\".\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%cu\n",
+        "#include<iostream>\n",
+        "void c_hello(){\n",
+        "    printf(\"Hello World!\\n\");\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "    c_hello();\n",
+        "    return 0;\n",
+        "}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b082b5b4-e996-4623-ed71-778c658362be",
+        "id": "bX2TiALNRYyf"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World!\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -533,11 +662,11 @@
         "!nvprof --version"
       ],
       "metadata": {
-        "id": "HB_JFFpvPQz8",
-        "outputId": "08161756-3388-41e7-dc20-b66aea83019c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HB_JFFpvPQz8",
+        "outputId": "08161756-3388-41e7-dc20-b66aea83019c"
       },
       "execution_count": 12,
       "outputs": [
@@ -562,9 +691,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6aJrNyoNJt4v",
-        "outputId": "57af2d26-1db9-467f-cfc3-c8896b176462"
+        "outputId": "4f9fd4ce-3306-472d-de0e-fcd4dba6e5ae"
       },
-      "execution_count": 25,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,12 +701,12 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
-            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-jr6dconk\n",
-            "  Running command git clone -q https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-jr6dconk\n",
+            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-l_vwlnf2\n",
+            "  Running command git clone -q https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-l_vwlnf2\n",
             "Building wheels for collected packages: NVCCPlugin\n",
             "  Building wheel for NVCCPlugin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4306 sha256=060bfbba8b9626dcb2ff9103d3d556ba722fd343cbfcd2ca5c844c1663fdd521\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-y7xwhf0e/wheels/ca/33/8d/3c86eb85e97d2b6169d95c6e8f2c297fdec60db6e84cb56f5e\n",
+            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4306 sha256=985b44b849a25fc83ca7efa691f7967d685870b36aeba315ddf3b091abcc3e82\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-kx_9onsy/wheels/ca/33/8d/3c86eb85e97d2b6169d95c6e8f2c297fdec60db6e84cb56f5e\n",
             "Successfully built NVCCPlugin\n",
             "Installing collected packages: NVCCPlugin\n",
             "Successfully installed NVCCPlugin-0.0.2\n"
@@ -595,9 +724,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zPCLbxXtGbXt",
-        "outputId": "ad66f60f-6540-40f0-9eba-f92a7eaeaf09"
+        "outputId": "cbbcbefa-aafc-4455-af75-2dbe0bae9b5d"
       },
-      "execution_count": 26,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,9 +762,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8ghAgIdRF4wY",
-        "outputId": "41ea5f3b-56c7-4ba0-90c7-cce0cebe86eb"
+        "outputId": "92f37185-5f7a-4c9b-d7a9-138cbb298336"
       },
-      "execution_count": 28,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
