使用 Colaboratory 建立

--- a/basic_tutorial/cuda_basic_tutorial.ipynb
+++ b/basic_tutorial/cuda_basic_tutorial.ipynb
@@ -21,6 +21,91 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "! add-apt-repository ppa:graphics-drivers/ppa\n",
+        "! apt update\n",
+        "! apt -y install nvidia-384 nvidia-384-dev\n",
+        "! apt-get -y install g++ freeglut3-dev build-essential libx11-dev libxmu-dev libxi-dev libglu1-mesa libglu1-mesa-dev"
+      ],
+      "metadata": {
+        "id": "HevL2ocHBztm",
+        "outputId": "2438f470-d011-424b-e817-307fcf1d1d24",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "\n",
+            "^C\n",
+            "Get:1 file:/var/cuda-repo-9-2-local  InRelease\n",
+            "Ign:1 file:/var/cuda-repo-9-2-local  InRelease\n",
+            "Get:2 file:/var/cuda-repo-9-2-local  Release [574 B]\n",
+            "Get:2 file:/var/cuda-repo-9-2-local  Release [574 B]\n",
+            "Hit:3 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease\n",
+            "Get:4 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "Hit:5 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
+            "Get:6 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "Get:7 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [83.3 kB]\n",
+            "Hit:8 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
+            "Ign:9 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:10 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
+            "Hit:12 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
+            "Hit:13 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
+            "Hit:14 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
+            "Fetched 261 kB in 2s (120 kB/s)\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "20 packages can be upgraded. Run 'apt list --upgradable' to see them.\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "You might want to run 'apt --fix-broken install' to correct these.\n",
+            "The following packages have unmet dependencies:\n",
+            " cuda-drivers : Depends: nvidia-396 (>= 396.26) but it is not going to be installed\n",
+            " libcuda1-396 : Depends: nvidia-396 (>= 396.26) but it is not going to be installed\n",
+            " nvidia-384 : Depends: nvidia-driver-390 but it is not going to be installed\n",
+            " nvidia-384-dev : Depends: nvidia-driver-390 but it is not going to be installed\n",
+            " nvidia-396-dev : Depends: nvidia-396 (>= 396.26) but it is not going to be installed\n",
+            " nvidia-opencl-icd-396 : Depends: nvidia-396 (>= 396.26) but it is not going to be installed\n",
+            "E: Unmet dependencies. Try 'apt --fix-broken install' with no packages (or specify a solution).\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "build-essential is already the newest version (12.4ubuntu1).\n",
+            "libglu1-mesa is already the newest version (9.0.0-2.1build1).\n",
+            "libglu1-mesa set to manually installed.\n",
+            "libglu1-mesa-dev is already the newest version (9.0.0-2.1build1).\n",
+            "libglu1-mesa-dev set to manually installed.\n",
+            "libxi-dev is already the newest version (2:1.7.9-1).\n",
+            "libxi-dev set to manually installed.\n",
+            "libxmu-dev is already the newest version (2:1.1.2-2).\n",
+            "libxmu-dev set to manually installed.\n",
+            "freeglut3-dev is already the newest version (2.8.1-3).\n",
+            "freeglut3-dev set to manually installed.\n",
+            "g++ is already the newest version (4:7.4.0-1ubuntu2.3).\n",
+            "g++ set to manually installed.\n",
+            "libx11-dev is already the newest version (2:1.6.4-3ubuntu0.4).\n",
+            "libx11-dev set to manually installed.\n",
+            "You might want to run 'apt --fix-broken install' to correct these.\n",
+            "The following packages have unmet dependencies:\n",
+            " cuda-drivers : Depends: nvidia-396 (>= 396.26) but it is not going to be installed\n",
+            " libcuda1-396 : Depends: nvidia-396 (>= 396.26) but it is not going to be installed\n",
+            " nvidia-396-dev : Depends: nvidia-396 (>= 396.26) but it is not going to be installed\n",
+            " nvidia-opencl-icd-396 : Depends: nvidia-396 (>= 396.26) but it is not going to be installed\n",
+            "E: Unmet dependencies. Try 'apt --fix-broken install' with no packages (or specify a solution).\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "SZAHFNCj4St8"
@@ -31,21 +116,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 74,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gvlavcVD4K7W",
-        "outputId": "a2741298-d450-45dc-ef3e-d2cc8118ce65"
+        "outputId": "d3045b6a-a013-463e-dd71-865bcbdc5b65"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "NVIDIA-SMI has failed because it couldn't communicate with the NVIDIA driver. Make sure that the latest NVIDIA driver is installed and running.\n",
-            "\n"
+            "/bin/bash: nvidia-smi: command not found\n"
           ]
         }
       ],
@@ -175,11 +259,11 @@
         "!apt-get --purge remove cuda nvidia* libnvidia-*"
       ],
       "metadata": {
-        "id": "WqMgmbab-EIJ",
-        "outputId": "cccd1db6-9867-4330-9538-35bc9f605982",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WqMgmbab-EIJ",
+        "outputId": "cccd1db6-9867-4330-9538-35bc9f605982"
       },
       "execution_count": 54,
       "outputs": [
@@ -1297,11 +1381,11 @@
         "!dpkg -l | grep cuda- | awk '{print $2}' | xargs -n1 dpkg --purge"
       ],
       "metadata": {
-        "id": "iTQSsFV6-GyT",
-        "outputId": "497b248e-3a48-472f-f8b9-5dc57e4d9dce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iTQSsFV6-GyT",
+        "outputId": "497b248e-3a48-472f-f8b9-5dc57e4d9dce"
       },
       "execution_count": 55,
       "outputs": [
@@ -2966,11 +3050,11 @@
         "!apt-get remove cuda-*"
       ],
       "metadata": {
-        "id": "6z9OxJcm-H1g",
-        "outputId": "8ec593a4-b1a7-4e1f-87f1-09a7d5d312b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6z9OxJcm-H1g",
+        "outputId": "8ec593a4-b1a7-4e1f-87f1-09a7d5d312b2"
       },
       "execution_count": 56,
       "outputs": [
@@ -3560,11 +3644,11 @@
         "!apt autoremove"
       ],
       "metadata": {
-        "id": "kHqotX5p-J-y",
-        "outputId": "c71f9528-8709-415d-ae01-c2dc2863c98b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kHqotX5p-J-y",
+        "outputId": "c71f9528-8709-415d-ae01-c2dc2863c98b"
       },
       "execution_count": 57,
       "outputs": [
@@ -3753,11 +3837,11 @@
         "!apt-get update"
       ],
       "metadata": {
-        "id": "P0GPPnUv-JGs",
-        "outputId": "4c051a26-76b9-4e7b-80fd-837f18a24604",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "P0GPPnUv-JGs",
+        "outputId": "4c051a26-76b9-4e7b-80fd-837f18a24604"
       },
       "execution_count": 58,
       "outputs": [
@@ -3788,11 +3872,11 @@
         "!wget https://developer.nvidia.com/compute/cuda/9.2/Prod/local_installers/cuda-repo-ubuntu1604-9-2-local_9.2.88-1_amd64 -O cuda-repo-ubuntu1604-9-2-local_9.2.88-1_amd64.deb\n"
       ],
       "metadata": {
-        "id": "GrUvEENZ-soz",
-        "outputId": "fb5be993-21be-4df6-a8c1-8851173984c3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GrUvEENZ-soz",
+        "outputId": "fb5be993-21be-4df6-a8c1-8851173984c3"
       },
       "execution_count": 59,
       "outputs": [
@@ -3830,11 +3914,11 @@
         "!dpkg -i cuda-repo-ubuntu1604-9-2-local_9.2.88-1_amd64.deb"
       ],
       "metadata": {
-        "id": "EyUDbqWV-tw-",
-        "outputId": "0ae5331f-26b7-4d7d-d8eb-d2d1240f8200",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EyUDbqWV-tw-",
+        "outputId": "0ae5331f-26b7-4d7d-d8eb-d2d1240f8200"
       },
       "execution_count": 60,
       "outputs": [
@@ -3857,11 +3941,11 @@
         "!apt-key add /var/cuda-repo-9-2-local/7fa2af80.pub"
       ],
       "metadata": {
-        "id": "V8q6itZq-whB",
-        "outputId": "0ca366d0-211f-4ec7-fe19-280eb2a61cea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "V8q6itZq-whB",
+        "outputId": "0ca366d0-211f-4ec7-fe19-280eb2a61cea"
       },
       "execution_count": 61,
       "outputs": [
@@ -3880,11 +3964,11 @@
         "!apt-get update"
       ],
       "metadata": {
-        "id": "vQTvecW4-yVL",
-        "outputId": "f0de7fce-8b35-4645-c96f-2c16df1d2217",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vQTvecW4-yVL",
+        "outputId": "f0de7fce-8b35-4645-c96f-2c16df1d2217"
       },
       "execution_count": 62,
       "outputs": [
@@ -3922,11 +4006,11 @@
         "!apt-get install cuda-9.2"
       ],
       "metadata": {
-        "id": "DmeBrX9e-u-B",
-        "outputId": "badd79de-5cc9-41ae-d6d7-16d1174b05d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DmeBrX9e-u-B",
+        "outputId": "badd79de-5cc9-41ae-d6d7-16d1174b05d3"
       },
       "execution_count": 63,
       "outputs": [
@@ -4521,11 +4605,11 @@
         "!apt-get install nvidia-cuda-dev"
       ],
       "metadata": {
-        "id": "J1Z1H18d6XJ-",
-        "outputId": "03f4797c-7eda-483d-eadb-0650d7fa4789",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "J1Z1H18d6XJ-",
+        "outputId": "03f4797c-7eda-483d-eadb-0650d7fa4789"
       },
       "execution_count": 53,
       "outputs": [
@@ -4598,11 +4682,11 @@
         "!apt autoremove"
       ],
       "metadata": {
-        "id": "yxTXRwBn6rEV",
-        "outputId": "4f65b9f6-8699-44c5-bcc2-35d4b29678aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yxTXRwBn6rEV",
+        "outputId": "4f65b9f6-8699-44c5-bcc2-35d4b29678aa"
       },
       "execution_count": 52,
       "outputs": [
@@ -4627,11 +4711,11 @@
         "!apt --fix-broken install"
       ],
       "metadata": {
-        "id": "Y6bmRlQs6zeg",
-        "outputId": "b4766796-acf3-4282-a244-0c930482ef4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Y6bmRlQs6zeg",
+        "outputId": "b4766796-acf3-4282-a244-0c930482ef4c"
       },
       "execution_count": 51,
       "outputs": [
@@ -4677,11 +4761,11 @@
         "!apt autoremove"
       ],
       "metadata": {
-        "id": "r4uhSLiR7cdq",
-        "outputId": "c4767f3d-a49e-4948-b705-43a71ebd017f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r4uhSLiR7cdq",
+        "outputId": "c4767f3d-a49e-4948-b705-43a71ebd017f"
       },
       "execution_count": 39,
       "outputs": [
@@ -4706,11 +4790,11 @@
         "!apt update && sudo apt full-upgrade"
       ],
       "metadata": {
-        "id": "4uO-xRgQ7lMB",
-        "outputId": "dddafa30-acfc-4082-f762-d61692957405",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4uO-xRgQ7lMB",
+        "outputId": "dddafa30-acfc-4082-f762-d61692957405"
       },
       "execution_count": 40,
       "outputs": [
@@ -4752,11 +4836,11 @@
         "!dpkg -l | grep -e cuda-.*9-1 | awk '{print $2}' | xargs -n1  dpkg --purge --force-all && apt-get remove nvidia-cuda-toolkit"
       ],
       "metadata": {
-        "id": "o-rPByDK7226",
-        "outputId": "667182f3-fb7d-4f91-fcc9-a1d70969e423",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "o-rPByDK7226",
+        "outputId": "667182f3-fb7d-4f91-fcc9-a1d70969e423"
       },
       "execution_count": 42,
       "outputs": [
@@ -4952,11 +5036,11 @@
         "!dpkg --configure nvidia-cuda-dev && dpkg --configure nvidia-cuda-toolkit"
       ],
       "metadata": {
-        "id": "EcHXR7W89Qfl",
-        "outputId": "874c0244-bfd5-4066-b77a-1244ad65d9cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EcHXR7W89Qfl",
+        "outputId": "874c0244-bfd5-4066-b77a-1244ad65d9cd"
       },
       "execution_count": 48,
       "outputs": [
@@ -5057,11 +5141,11 @@
         "!ls /usr/bin/g* "
       ],
       "metadata": {
-        "id": "auf_gg0z5YOp",
-        "outputId": "6a8e70df-449b-42b5-92d4-f05279e1917a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "auf_gg0z5YOp",
+        "outputId": "6a8e70df-449b-42b5-92d4-f05279e1917a"
       },
       "execution_count": 22,
       "outputs": [
