--- a/nvidia_samples/nvidia_sample.ipynb
+++ b/nvidia_samples/nvidia_sample.ipynb
@@ -31,20 +31,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gvlavcVD4K7W",
-        "outputId": "70b23c21-e63d-4968-b379-2eab7898c588"
+        "outputId": "8d9e3ae9-58ae-45f4-b201-db5e253caf91"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mon Sep 26 03:19:46 2022       \n",
+            "Mon Sep 26 08:24:09 2022       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -122,13 +122,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "evxzc04GGqH3",
-        "outputId": "b384adb3-c122-4633-f5e6-8d16160eb93d"
+        "outputId": "ff0f0066-664b-4a6a-9a85-ccd50e2f7b2a"
       },
       "outputs": [
         {
@@ -368,13 +368,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "YnLx3pVtLTca",
-        "outputId": "6db1c185-a874-46fa-e991-ad1e3f4f3781"
+        "outputId": "3e36e0aa-babf-4a9e-bade-3ef86763455f"
       },
       "outputs": [
         {
@@ -382,11 +382,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'Cuda_Colab_study'...\n",
-            "remote: Enumerating objects: 96, done.\u001b[K\n",
-            "remote: Counting objects: 100% (96/96), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (89/89), done.\u001b[K\n",
-            "remote: Total 96 (delta 44), reused 29 (delta 7), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (96/96), done.\n"
+            "remote: Enumerating objects: 214, done.\u001b[K\n",
+            "remote: Counting objects: 100% (214/214), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (177/177), done.\u001b[K\n",
+            "remote: Total 214 (delta 85), reused 126 (delta 34), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (214/214), 2.60 MiB | 16.83 MiB/s, done.\n",
+            "Resolving deltas: 100% (85/85), done.\n"
           ]
         }
       ],
@@ -396,20 +397,69 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "TmmtqCzVMECe",
-        "outputId": "4cbea017-733f-4cbe-b3a9-15f2a6002bc6"
+        "id": "ljBaItYiMHaK",
+        "outputId": "7717bbd9-5b00-4842-b218-171710576ef8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cuda_Colab_study  sample_data\n"
+            "/content/t1/Cuda_Colab_study/nvidia_samples/0_intro/simplePrintf\n"
+          ]
+        }
+      ],
+      "source": [
+        "%cd ./Cuda_Colab_study/nvidia_samples/0_intro/simplePrintf/"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!./hello"
+      ],
+      "metadata": {
+        "id": "Uft8FtA37Otr",
+        "outputId": "92b64cb0-20c8-4239-caf4-6d98431be329",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "printf() is called. Output:\n",
+            "\n",
+            " hello world \n",
+            " "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TmmtqCzVMECe",
+        "outputId": "6edeec00-115f-45a6-f1e7-3d0f4e09ef92"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a.out  hello  hello_printf.cu  Makefile  note.md  README.md  simplePrintf.cu\n"
           ]
         }
       ],
@@ -419,25 +469,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "!mkdir t1"
+      ],
       "metadata": {
+        "id": "kK4ND6sK5yaT"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd t1"
+      ],
+      "metadata": {
+        "id": "IQhP5Vap5lcU",
+        "outputId": "ff399448-7910-49b3-e002-c2164e871182",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "ljBaItYiMHaK",
-        "outputId": "2deaefbe-03c3-41d6-92b8-34f60ff24934"
+        }
       },
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/Cuda_Colab_study/basic_tutorial\n"
+            "/content/t1\n"
           ]
         }
-      ],
-      "source": [
-        "%cd Cuda_Colab_study/basic_tutorial"
       ]
     },
     {
@@ -1327,9 +1388,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6aJrNyoNJt4v",
-        "outputId": "a12071b8-e0b2-455a-88d6-73934866caf2"
+        "outputId": "741f25d2-2109-40cd-8341-bb9acc9111c5"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -1337,8 +1398,15 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting git+https://github.com/andreinechaev/nvcc4jupyter.git\n",
-            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-wlnl4r9o\n",
-            "  Running command git clone -q https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-wlnl4r9o\n"
+            "  Cloning https://github.com/andreinechaev/nvcc4jupyter.git to /tmp/pip-req-build-cxybtxv_\n",
+            "  Running command git clone -q https://github.com/andreinechaev/nvcc4jupyter.git /tmp/pip-req-build-cxybtxv_\n",
+            "Building wheels for collected packages: NVCCPlugin\n",
+            "  Building wheel for NVCCPlugin (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for NVCCPlugin: filename=NVCCPlugin-0.0.2-py3-none-any.whl size=4306 sha256=b2402da2afc791841366a9570d0a93dd9d0f1b4e39ba8109ee438e385e3add5f\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-irds0d6w/wheels/ca/33/8d/3c86eb85e97d2b6169d95c6e8f2c297fdec60db6e84cb56f5e\n",
+            "Successfully built NVCCPlugin\n",
+            "Installing collected packages: NVCCPlugin\n",
+            "Successfully installed NVCCPlugin-0.0.2\n"
           ]
         }
       ]
@@ -1353,16 +1421,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zPCLbxXtGbXt",
-        "outputId": "1657a31e-5640-4ef5-a1e5-e94687d9fa24"
+        "outputId": "5e758c09-6cd4-4895-d228-499292d7eb99"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The nvcc_plugin extension is already loaded. To reload it, use:\n",
-            "  %reload_ext nvcc_plugin\n"
+            "created output directory at /content/t1/Cuda_Colab_study/nvidia_samples/0_intro/simplePrintf/src\n",
+            "Out bin /content/t1/Cuda_Colab_study/nvidia_samples/0_intro/simplePrintf/result.out\n"
           ]
         }
       ]
@@ -1416,6 +1484,7 @@
         "int main() {\n",
         "    cuda_hello<<<1,1>>>(); \n",
         "    printf(\" hello world from main! \\n\");\n",
+        "    cudaDeviceSynchronize();\n",
         "    //cout << \"hello world from main!\\n\";\n",
         "    return 0;\n",
         "}"
@@ -1425,15 +1494,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OwvnqvY25Ion",
-        "outputId": "1c596321-12dd-4a71-d729-0ed553a2b543"
+        "outputId": "1282292c-0fcd-4cf5-dfbd-df6f123cdc14"
       },
-      "execution_count": null,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             " hello world from main! \n",
+            " hello world from GPU! \n",
             "\n"
           ]
         }
@@ -1460,6 +1530,59 @@
             "nvprof: NVIDIA (R) Cuda command line profiler\n",
             "Copyright (c) 2012 - 2020 NVIDIA Corporation\n",
             "Release version 11.1.105 (21)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%cu\n",
+        "// System includes\n",
+        "#include <stdio.h>\n",
+        "#include <assert.h>\n",
+        "\n",
+        "// CUDA runtime\n",
+        "#include <cuda_runtime.h>\n",
+        "\n",
+        "// helper functions and utilities to work with CUDA\n",
+        "//#include <helper_functions.h>\n",
+        "//#include <helper_cuda.h>\n",
+        "\n",
+        "\n",
+        "__global__ void testKernel(void) {\n",
+        "  printf(\" hello world \\n \");\n",
+        "}\n",
+        "\n",
+        "int main(int argc, char **argv) {\n",
+        "  \n",
+        "  printf(\"printf() is called. Output:\\n\\n\");\n",
+        "\n",
+        "  // Kernel configuration, where a two-dimensional grid and\n",
+        "  // three-dimensional blocks are configured.\n",
+        "  \n",
+        "  testKernel<<<1,1>>>();\n",
+        "  cudaDeviceSynchronize();\n",
+        "\n",
+        "  return EXIT_SUCCESS;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "OUW1B-as73L3",
+        "outputId": "91a886b4-f8bb-490e-9b8a-dc8702670dd9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "printf() is called. Output:\n",
+            "\n",
+            "\n"
           ]
         }
       ]
